--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,7 +33,7 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v ./src
+      run: cd ./src && go build -v .
 
     - name: Test
-      run: go test -v ./src
+      run: cd ./src && go test -v .
